# poetshuffle

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.app_tests  Dockerfile.server  Dockerfile.test_db  README.md  Trunk.toml  app-test-compose.yml  app_test.sh  docker-compose.yml  how_to_fresh_update_migration  index.html  run-dev.sh  run.sh  schema.graphql  server-dev-compose.yml  server-test.sh  server_test.sh  test.sh
.github/workflows/: general.yml
app/: Cargo.toml  Trunk.toml  schema.graphql  webdriver.json
app/app_queries/: add_poem.graphql  create_pending_set.graphql  poem.graphql  update_poem.graphql  update_poem_idx.graphql  update_set.graphql  validate_registration.graphql
app/src/: console_writer.rs  main.rs  queries.rs  routes.rs  styles.rs
app/src/components/: accept_invitation.rs  admin.rs  app.rs  footer.rs  login.rs  login_register.rs  main_menu.rs  mod.rs  register.rs  validate_registration.rs
app/src/components/audio/: audio_player.rs  mod.rs
app/src/components/publish/: add_poem.rs  edit_pending_set.rs  edit_poem.rs  invite_poet.rs  menu.rs  mod.rs  poem_list.rs
app/src/components/publish/menu/: mod.rs
app/src/components/publish/menu/edit_pending_set/: mod.rs
app/src/components/publish/menu/edit_pending_set/poem_list/: add_poem.rs  mod.rs
app/src/services/: network.rs  test_util.rs
app/src/types/: audio_context.rs  auth_context.rs  edit_poem_context.rs  edit_poem_list_context.rs  edit_set_context.rs  mod.rs  msg_context.rs
app_queries/: accept_invitation.graphql  add_poem.graphql  admin_login.graphql  create_pending_set.graphql  invite_user.graphql  login.graphql  modify_user_role.graphql  pending_set_by_user.graphql  poem_uuids_by_set_uuid.graphql  super_admin_login.graphql  update_link.graphql  update_title.graphql
crates/app/: Cargo.toml  index.html  schema.graphql
crates/app/app_queries/: accept_invitation.graphql  add_banter.graphql  add_poem.graphql  delete_banter.graphql  delete_poem.graphql  login.graphql  pending_set_by_user.graphql  poem.graphql  register.graphql  set_approve_banter.graphql  set_approve_poem.graphql  update_poem.graphql
crates/app/app_schemas/: banter_schema.graphql  poem_schema.graphql  set_schema.graphql  validation_schema.graphql
crates/app/src/: main.rs  queries.rs  routes.rs
crates/app/src/components/: accept_invitation.rs  admin.rs  app.rs  audio_with_reader.rs  login.rs  login_register.rs  main_menu.rs  mod.rs  register.rs  validate_registration.rs
crates/app/src/components/audio/: audio_player.rs  mod.rs  play_button.rs
crates/app/src/components/publish/: invite_poet.rs  mod.rs
crates/app/src/components/publish/edit_pending_set/: create_set.rs  (+5 more)
crates/app/src/components/text_reader/: mod.rs  read_button.rs  text_reader.rs
crates/app/src/components/validation/: accept_invitation.rs  admin.rs  login.rs  login_register.rs  mod.rs  register.rs  validate_registration.rs
crates/app/src/queries/: banter.rs  mod.rs  poem.rs  set.rs  validation.rs
crates/app/src/services/: mod.rs  network.rs  test_util.rs  utility.rs
crates/app/src/types/: audio_context.rs  auth_context.rs  edit_poem_list_context.rs  edit_set_context.rs  footer_context.rs  mod.rs  msg_context.rs  transcript_context.rs
crates/entity/src/: banters.rs  comments.rs  edit_set_history.rs  intros.rs  invitations.rs  logins.rs  mod.rs  orders.rs  poems.rs  prelude.rs  sea_orm_active_enums.rs  set_editors.rs  sets.rs  users.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20220521_000001_create_users.rs  m20220521_000002_sets.rs  m20220521_000007_banters.rs  m20220521_000008_poems.rs  m20220521_000009_intros.rs  m20220521_000011_orders.rs  m20220531_000000_alter_logins.rs  m20220609_000001_alter_users_logins.rs  m20220615_000001_alter_invitations.rs  m20220619_000003_edit_set_history.rs  m20220619_000004_alter_sets.rs  m20220715_000001_create_set_editors.rs  m20220715_000002_alter_sets.rs  m20220715_000003_alter_poems.rs  m20220715_000004_alter_poems.rs  m20220716_000001_alter_poems.rs
crates/server/: Cargo.toml
crates/server/src/: auth.rs  email.rs  main.rs  storage.rs
crates/server/src/graphql/: guards.rs  mod.rs  schema.rs
crates/server/src/graphql/resolvers/: admin.rs  banters.rs  login.rs  mod.rs  poems.rs  publish.rs  sets.rs
crates/server/src/http/: app.rs  handlers.rs  http_server.rs  mod.rs  presign_url.rs  upload.rs
crates/server/src/types/: auth.rs  mod.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
dockers/: Dockerfile.app_test  Dockerfile.server_app_test  Dockerfile.server_dev
entity/: Cargo.toml
entity/src/: banters.rs  comments.rs  edit_poem_history.rs  edit_set_history.rs  intros.rs  invitations.rs  logins.rs  mod.rs  pen_names.rs  permissions.rs  poems.rs  prelude.rs  sea_orm_active_enums.rs  seaql_migrations.rs  set_options.rs  sets.rs  users.rs
local_cdn/: Cargo.toml
local_cdn/src/: main.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220521_000000_init.rs  m20220521_000001_create_users.rs  m20220521_000002_sets.rs  m20220521_000003_permissions.rs  m20220521_000004_set_options.rs  m20220521_000005_logins.rs  m20220521_000006_pen_names.rs  m20220521_000007_banters.rs  m20220521_000007_poems.rs  m20220521_000008_intros.rs  m20220521_000008_poems.rs  m20220521_000009_intros.rs  m20220521_000010_comments.rs  m20220521_000011_orders.rs  m20220521_530pm_create_users.rs  m20220531_000000_alter_logins.rs  m20220531_000001_alter_logins.rs  m20220609_000001_alter_users_logins.rs  m20220614_000001_create_invitations.rs  m20220615_000001_alter_invitations.rs  m20220619_000001_alter_poems.rs  m20220619_000002_edit_poem_history.rs  m20220619_000003_edit_set_history.rs  m20220619_000004_alter_sets.rs
server/: Cargo.toml  Dockerfile.server
server/src/: auth.rs  email.rs  handlers.rs  http_server.rs  local_cdn.rs  main.rs  storage.rs
server/src/graphql/: mod.rs  schema.rs  test_util.rs
server/src/graphql/resolvers/: admin.rs  login.rs  poems.rs  sets.rs
server/src/http/: app.rs  handlers.rs  mod.rs  presign_url.rs  upload.rs
server/src/types/: auth.rs
(+10 files in other folders)
