[package]
name = "poetshuffle_v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "entity", "migration"]

[lib]
name = "poetshuffle"
path = "src/lib/mod.rs"


[[bin]]
name = "app"

[[bin]]
name = "server"

[features]
dev = ["local_cdn","graphiql"]
local_cdn = []
graphiql = []

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.56"
tracing = "0.1.34"
tracing-subscriber = {version="0.3.11",features=["env-filter"]}
serde = "1.0.137"
dotenv_codegen = "0.15.0"
parking_lot = "0.12.0"
lazy_static = "1.4.0"
reqwest = {version="0.11.10",features=["json"]}
serde_json = "1.0.81"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.57"
yew = {version = "0.19.3" }
yew-router = {version = "0.16.0"}
yew-hooks = "0.1.56"
web-sys = {version="0.3.57",features=["HtmlElement","HtmlInputElement","Navigator"]}
stylist = {version="0.10.0",features=["yew_integration"]}
gloo = "0.7.0"
graphql_client = {version="0.10.0"}
wasm-logger = "0.2.0"
wee_alloc = "0.4.5"
console_error_panic_hook = "0.1.7"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = {version="1.18.2",features=["full","rt"]}
tokio-util = {version="0.7.2",features=["rt"]}
axum = "0.5.6"
tower-http = {version="0.3.3",features=["fs","set-header","trace"]}
tower = "0.4.12"
once_cell = "1.10.0"
sea-orm = {version="0.8.0",features=["uuid","chrono"]}
migration = {path="migration"}
async-graphql = {version="4.0.0",features=["tracing","uuid08","chrono"]}
async-graphql-axum = "4.0.0"
jwt = "0.16.0"
sha2 = "0.10.2"
hmac = "0.12.1"
entity = {path="entity"}
sea-query = {version="0.25.0",features=["with-uuid"]}
chrono = "0.4.19"
postmark = {version="0.5.0",features=["reqwest"]}
passwords = "3.1.9"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
mockall = "0.11.1"
