[package]
name = "poetshuffle_v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "entity", "migration","app","server"]

[lib]
name = "poetshuffle"
path = "src/lib/mod.rs"


[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.56"
tracing = "0.1.34"
tracing-subscriber = {version="0.3.11",features=["env-filter"]}
serde = "1.0.137"
dotenv_codegen = "0.15.0"
parking_lot = "0.12.0"
lazy_static = "1.4.0"
reqwest = {version="0.11.10",features=["json"]}
serde_json = "1.0.81"
uuid = {version="1.1.2",features=["serde","v4","js"]}



