[package]
name = "app"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "app"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.56"
tracing = "0.1.34"
tracing-subscriber = {version="0.3.11",features=["env-filter"]}
serde = "1.0.137"
dotenv_codegen = "0.15.0"
parking_lot = "0.12.0"
lazy_static = "1.4.0"
reqwest = {version="0.11.10",features=["json"]}
serde_json = "1.0.81"
uuid = {version="1.1.2",features=["serde","v4","js"]}


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.81"
wasm-bindgen-futures = "0.4.30"
js-sys = "0.3.57"
yew = {version = "0.19.3" }
yew-router = {version = "0.16.0"}
yew-hooks = "0.1.56"
web-sys = {version="0.3.57",features=["HtmlElement","HtmlInputElement","HtmlSelectElement","Navigator","HtmlParagraphElement","File","FileList"]}
stylist = {version="0.10.0",features=["yew_integration"]}
gloo = "0.7.0"
graphql_client = {version="0.10.0"}
wasm-logger = "0.2.0"
wee_alloc = "0.4.5"
console_error_panic_hook = "0.1.7"
base64 = "0.13.0"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.31"