[package]
name = "entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "entity"
path = "src/mod.rs"

[dependencies]
sea-orm = "0.8.0"
async-graphql = {version="4.0.0",features=["uuid08","chrono"]}
serde_derive = "1.0.137"
serde = "1.0.137"