[package]
name = "local_cdn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.18.2",features=["full","rt-multi-thread"]}
tower-http = {version="0.3.3",features=["fs","set-header","trace"]}
axum = "0.5.6"
tower = "0.4.12"