[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
entity = { path = "../entity" }
sea-orm = {version="0.8.0",features = ["sqlx-postgres","runtime-tokio-rustls"]}
[dependencies.sea-orm-migration]
version = "0.8.0"
