[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
dev = ["local_cdn","graphiql"]
app-test = ["dev","mock_email"]
local_cdn = []
graphiql = []
mock_email = ["dep:mockall"]

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.56"
tracing = "0.1.34"
tracing-subscriber = {version="0.3.11",features=["env-filter"]}
serde = "1.0.137"
dotenv_codegen = "0.15.0"
parking_lot = "0.12.0"
lazy_static = "1.4.0"
reqwest = {version="0.11.10",features=["json"]}
serde_json = "1.0.81"
uuid = {version="1.1.2",features=["serde","v4"]}
shared = {path= "../shared" }
bincode = "2.0.0-rc.1"
bytes = "1.1.0"
axum-macros = "0.2.3"
tokio = {version="1.18.2",features=["full","rt-multi-thread"]}
tokio-util = {version="0.7.2",features=["rt"]}
axum = {version="0.5.12",features=["ws"]}
tower-http = {version="0.3.3",features=["fs","set-header","trace","cors"]}
tower = "0.4.12"
once_cell = "1.10.0"
sea-orm = {version="0.8.0",features=["uuid","chrono",]}
migration = {path= "../migration" }
async-graphql = {version="4.0.0",features=["tracing","uuid08","uuid","chrono"]}
async-graphql-axum = "4.0.0"
jwt = "0.16.0"
sha2 = "0.10.2"
hmac = "0.12.1"
entity = {path= "../entity" }
sea-query = {version="0.25.0",features=["with-uuid"]}
chrono = "0.4.19"
postmark = {version="0.5.0",features=["reqwest"]}
passwords = "3.1.9"
mockall = { version="0.11.1",optional=true}
rust-s3 = "0.31.0"

[dev-dependencies]
tracing-test = "0.2.2"

