[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = {version="1.1.2",features=["serde"]}
bincode = {version="2.0.0-rc.1",features=["serde"]}
strum = {version="0.24.1",features=["derive"]}